# tp1gdw

./: .gitignore  Makefile
doc/: ._scriptGeraGraficos.gn  Makefile  dinossauro.sty  doc.aux  doc.bbl  doc.bib  doc.blg  doc.tex  scriptGeraGraficos.gn  tempos
projeto-extracao/: README  clean_pages.pl
projeto-extracao/classes_equivalencia/: Makefile  Makefile~  config.h  ctree.h  ctree.inl  debug.h  ksubtree_inspector.h  ksubtree_inspector.inl  ksubtree_inspector_test.cc  ksubtrees  ksubtrees.c  ksubtrees.c~  makeall.sh  my_hash_map.h  subtree_inspector.h  subtree_inspector.inl
projeto-extracao/htmlcxx-0.7.3/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  htmlcxx  libtool
projeto-extracao/htmlcxx-0.7.3/.deps/: htmlcxx.Po
projeto-extracao/htmlcxx-0.7.3/autom4te.cache/: output.0  requests  traces.0
projeto-extracao/htmlcxx-0.7.3/css/: Makefile  Makefile.in  css_lex.lo  css_syntax.c  css_syntax.h  css_syntax.lo  libcss_parser.la  libcss_parser_pp.la  parser.lo  parser_pp.lo
projeto-extracao/htmlcxx-0.7.3/css/.deps/: css_lex.Plo  css_syntax.Plo  parser.Plo  parser_pp.Plo
projeto-extracao/htmlcxx-0.7.3/html/: Makefile  Makefile.in  libhtmlcxx.la  libhtmlcxx_la-CharsetConverter.lo  libhtmlcxx_la-Extensions.lo  libhtmlcxx_la-Node.lo  libhtmlcxx_la-ParserDom.lo  libhtmlcxx_la-ParserSax.lo  libhtmlcxx_la-Uri.lo  libhtmlcxx_la-utils.lo  tests  tests.cc  tld.list  tree_backup.h  uriTests  uriTests.cc
projeto-extracao/htmlcxx-0.7.3/html/.deps/: libhtmlcxx_la-CharsetConverter.Plo  libhtmlcxx_la-Extensions.Plo  libhtmlcxx_la-Uri.Plo  (+6 more)
(+26 files in other folders)
